# shion-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets/character/: generate_placeholders.py
backend/: pyproject.toml
backend/shion/: config.py  main.py
backend/shion/core/: agent.py  events.py  memory.py  notifications.py  oauth_store.py  persona.py  proactive.py  scheduler.py  usage.py  voice.py
backend/shion/db/: __init__.py  models.py  session.py
backend/shion/interfaces/discord/: adapter.py  format.py
backend/shion/interfaces/web/: auth.py  conversations.py  dashboard.py  google_oauth.py  memories.py  plugins.py  voice.py  ws.py  ws_manager.py
backend/shion/llm/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py  router.py
backend/shion/plugins/: __init__.py  base.py  loader.py
backend/tests/: test_agent_tools.py  test_anthropic.py  test_config.py  test_discord_format.py  test_google_workspace.py  test_memory.py  test_news.py  test_openai_compat.py  test_persona.py  test_plugins.py  test_proactive.py  test_reminder.py  test_usage.py  test_voice.py
config/: config.yaml  persona.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  ws.ts
plugins/google_workspace/: plugin.py  plugin.yaml
plugins/news/: plugin.py  plugin.yaml
plugins/proactive/: plugin.py  plugin.yaml
plugins/reminder/: plugin.py  plugin.yaml
plugins/weather/: plugin.py  plugin.yaml
(+9 files in other folders)
